# Cloth-Sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: oren_nayar_frag.glsl  oren_nayar_vert.glsl
include/: cloth.h  cloth_sim.h  config.h  mesh.h
src/: cloth.cpp  main.cpp  mesh.cpp
